--- a/shufl-web/src/app/components/shared/icon-button/icon-button.component.scss
+++ b/shufl-web/src/app/components/shared/icon-button/icon-button.component.scss
@@ -1,9 +1,9 @@
-@import 'src/assets/scss/variables/colours';
-@import 'src/assets/scss/variables/dimensions';
+@import "src/assets/scss/variables/colours";
+@import "src/assets/scss/variables/dimensions";
 
 .button {
     height: 75px;
-    
+
     padding: 7.5px;
 
     display: flex;
