--- a/shufl-web/src/app/components/album/album.component.scss
+++ b/shufl-web/src/app/components/album/album.component.scss
@@ -1,4 +1,4 @@
-@import 'src/assets/scss/variables/colours';
+@import "src/assets/scss/variables/colours";
 
 .card-container {
     top: 5%;
@@ -8,92 +8,96 @@
         margin-bottom: 5%;
 
         position: relative;
-    
+
         opacity: 0;
-    
+
         -webkit-transition: opacity 0.5s ease-in-out;
         -moz-transition: opacity 0.5s ease-in-out;
         transition: opacity 0.5s ease-in-out;
-    
+
         overflow-y: auto;
-    
+
         &.loaded {
             opacity: 1;
         }
-    
+
         .album-info-container {
             .album-cover {
                 display: flex;
-    
+
                 img {
                     width: 250px;
                     height: 250px;
-    
+
                     margin: auto;
                 }
             }
-    
-            h2, h3, p {
+
+            h2,
+            h3,
+            p {
                 text-align: center;
             }
-    
-            .artists-container, .genres-container {
+
+            .artists-container,
+            .genres-container {
                 display: flex;
-    
+
                 justify-content: center;
-    
-                .artist-link, .genre-label {
+
+                .artist-link,
+                .genre-label {
                     color: $tertiary-foreground-colour;
-                    
+
                     text-decoration: none;
-    
+
                     &:not(:last-child)::after {
                         content: ", ";
                         margin-right: 3px;
                     }
                 }
-    
+
                 .artist-link {
                     &.disabled {
                         cursor: default;
-    
+
                         pointer-events: none;
                     }
-    
+
                     &:not(.disabled):hover {
                         text-decoration: underline;
                     }
                 }
-    
+
                 .genre-label {
                     margin-top: 15px;
                     margin-bottom: 0;
                 }
             }
-    
+
             .button {
                 width: 60%;
                 height: 50px;
-    
+
                 padding: 10px;
                 margin: auto;
                 margin-bottom: 25px;
-    
+
                 display: flex;
-    
+
                 text-decoration: none;
-    
+
                 img {
                     width: 40px;
                     height: 40px;
-    
+
                     margin-top: 5px;
                     margin-right: -40px;
                 }
-    
+
                 p {
                     margin: auto;
-    
+
                     font-size: 2em;
                 }
             }
@@ -134,5 +138,4 @@
         left: 30%;
         right: 30%;
     }
-    
 }
