--- a/shufl-web/src/app/components/shared/track-list/track-list.component.scss
+++ b/shufl-web/src/app/components/shared/track-list/track-list.component.scss
@@ -1,6 +1,6 @@
 .track-list {
-    .last-child {
-        * {
+    :last-child {
+        ::ng-deep .track {
             border-bottom: none;
         }
     }
