--- a/shufl-web/src/app/components/shared/album-icon/album-icon.component.scss
+++ b/shufl-web/src/app/components/shared/album-icon/album-icon.component.scss
@@ -39,21 +39,34 @@
             overflow: hidden;
             text-overflow: ellipsis;
             white-space: nowrap;
+
+            &:hover {
+                text-decoration: underline;
+            }
         }
 
         .artist-links {
             height: 40px;
-            
+            height: 18px;
+
+            margin-top: 20px;
+            margin-bottom: 20px;
+
             position: relative;
 
             overflow: hidden;
 
             .artist-links-container {
                 width: 100%;
-                height: 50px;
 
                 position: absolute;
             }
+        }
+
+        .album-release-date {
+            color: $tertiary-foreground-colour;
+            
+            margin: 0px;
         }
     }
 }
