--- a/shufl-web/src/app/components/artist/artist.component.scss
+++ b/shufl-web/src/app/components/artist/artist.component.scss
@@ -28,7 +28,7 @@
 
             .genres-container {
                 .genre-label {
-                    margin-top: 0px;
+                    margin-top: 0;
                 }
             }
         }
