--- a/shufl-web/src/app/components/shared/album-icon/album-icon.component.scss
+++ b/shufl-web/src/app/components/shared/album-icon/album-icon.component.scss
@@ -66,7 +66,7 @@
         .album-release-date {
             color: $tertiary-foreground-colour;
 
-            margin: 0px;
+            margin: 0;
         }
     }
 }
