--- a/shufl-web/src/app/app.component.html
+++ b/shufl-web/src/app/app.component.html
@@ -1,1 +1,8 @@
-<router-outlet></router-outlet>
+<div class="app-stage">
+    <div class="stage">
+        <router-outlet></router-outlet>
+    </div>
+    <div class="nav-bar-container">
+        <app-nav-bar></app-nav-bar>
+    </div>
+</div>
