--- a/shufl-web/src/assets/scss/variables/colours.scss
+++ b/shufl-web/src/assets/scss/variables/colours.scss
@@ -4,7 +4,13 @@ $background-gradient-secondary-colour: #8413e0;
 $primary-background-colour: #393e46;
 $primary-background-colour-hover: #2e3238;
 
-$primary-foreground-colour: #d9d9da;
 $secondary-foreground-colour: #355c7d;
 $secondary-foreground-colour-hover: #1f3c54;
+
+$tertiary-background-colour: #2c3035;
+
+$primary-foreground-colour: #d9d9da;
+
 $tertiary-foreground-colour: #adadad;
+
+$nav-bar-foreground-colour-active: #459deb;
