--- a/shufl-web/src/assets/scss/variables/dimensions.scss
+++ b/shufl-web/src/assets/scss/variables/dimensions.scss
@@ -1,1 +1,6 @@
 $primary-border-radius: 5px;
+
+$nav-bar-height: 60px;
+$nav-bar-width: 20%;
+$nav-bar-width-desktop: 375px;
+$nav-bar-tablet-breakpoint: 1025px;
