--- a/shufl-web/src/app/components/shared/not-found/not-found.component.html
+++ b/shufl-web/src/app/components/shared/not-found/not-found.component.html
@@ -1,4 +1,6 @@
-<div class="card">
-    <h2>You seem lost</h2>
-    <app-button [buttonText]="'Home'" (click)="buttonClick()"></app-button>
+<div class="card-container">
+    <div class="card">
+        <h2>You seem lost</h2>
+        <app-button [buttonText]="'Home'" (click)="buttonClick()"></app-button>
+    </div>
 </div>
