--- a/shufl-web/src/app/components/shared/nav-bar/nav-bar-item/nav-bar-item.component.scss
+++ b/shufl-web/src/app/components/shared/nav-bar/nav-bar-item/nav-bar-item.component.scss
@@ -16,7 +16,7 @@ $nav-bar-icon-margin-top: 8px;
         .icon {
             svg {
                 fill: $primary-foreground-colour;
-                
+
                 path {
                     stroke: $primary-foreground-colour;
                     stroke-width: 30;
@@ -40,7 +40,7 @@ $nav-bar-icon-margin-top: 8px;
             height: 25px;
 
             fill: $tertiary-foreground-colour;
-            
+
             path {
                 stroke: $tertiary-foreground-colour;
                 stroke-width: 10;
@@ -77,7 +77,7 @@ $nav-bar-icon-margin-top: 8px;
             }
 
             .icon {
-                margin-left: 15px
+                margin-left: 15px;
             }
 
             .title {
