--- a/shufl-web/src/app/components/shared/inline-artists-ticker/inline-artists-ticker.component.html
+++ b/shufl-web/src/app/components/shared/inline-artists-ticker/inline-artists-ticker.component.html
@@ -1,3 +1,3 @@
 <div class="artists-links-container">
-    <a *ngFor="let artist of artists" class="artist-link" href="/artist/{{ artist.id }}">{{ artist.name }}</a>
+    <a *ngFor="let artist of artists" class="artist-link" [routerLink]="['/artist', artist.id]">{{ artist.name }}</a>
 </div>
