Added logo and PWA

--- a/shufl-web/src/app/components/album/album.component.html
+++ b/shufl-web/src/app/components/album/album.component.html
@@ -13,7 +13,7 @@
                 <p *ngFor="let genre of genres" class="genre-label">{{ genre | genreFormatter }}</p>
             </div>
             <p>{{ albumData.releaseDate | date: 'MMMM yyyy' }}</p>
-            <a class="button" href="{{ albumData.url }}" target="new"><img src="assets/img/spotify-logo.png">
+            <a class="button" href="{{ albumData.url }}" target="new"><img src="assets/img/logos/spotify-logo.png">
                 <p>Open</p>
             </a>
         </div>
