--- a/shufl-web/src/app/components/home/home.component.html
+++ b/shufl-web/src/app/components/home/home.component.html
@@ -1,5 +1,6 @@
 <div class="card-container">
     <div class="card">
+        <div class="app-icon"></div>
         <app-icon-button [buttonText]="'Random Track'" [buttonIconSource]="'assets/img/button-icons/musical-note.png'" (click)="buttonClick('track')"></app-icon-button>
         <app-icon-button [buttonText]="'Random Album'" [buttonIconSource]="'assets/img/button-icons/vinyl-disc.png'" (click)="buttonClick('album')"></app-icon-button>
         <app-icon-button [buttonText]="'Random Artist'" [buttonIconSource]="'assets/img/button-icons/microphone.png'" (click)="buttonClick('artist')"></app-icon-button>
