--- a/shufl-web/src/app/components/shared/track-list/track-list-item/track-list-item.component.html
+++ b/shufl-web/src/app/components/shared/track-list/track-list-item/track-list-item.component.html
@@ -16,7 +16,7 @@
     </div>
 
     <a class="button" href="{{ trackUrl }}" target="new">
-        <img src="assets/img/spotify-logo.png">
+        <img src="assets/img/logos/spotify-logo.png">
         <p>Open</p>
     </a>
 </div>
