--- a/shufl-web/src/app/components/artist/artist.component.html
+++ b/shufl-web/src/app/components/artist/artist.component.html
@@ -9,7 +9,7 @@
                 <p *ngFor="let genre of genres" class="genre-label">{{ genre | genreFormatter }}</p>
             </div>
             <p>{{ artistData.followers | number }} followers</p>
-            <a class="button" href="{{ artistData.url }}" target="new"><img src="assets/img/spotify-logo.png">
+            <a class="button" href="{{ artistData.url }}" target="new"><img src="assets/img/logos/spotify-logo.png">
                 <p>Open</p>
             </a>
         </div>
