--- a/shufl-web/src/app/components/shared/nav-bar/nav-bar-item/nav-bar-item.component.scss
+++ b/shufl-web/src/app/components/shared/nav-bar/nav-bar-item/nav-bar-item.component.scss
@@ -7,10 +7,17 @@ $nav-bar-icon-margin-top: 8px;
     height: calc(100% - #{$nav-bar-icon-margin-top});
 
     margin-top: $nav-bar-icon-margin-top;
+    
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+
+    -webkit-tap-highlight-color: transparent;
 
     cursor: pointer;
-
-    user-select: none;
 
     &.active {
         .icon {
