--- a/shufl-web/src/styles.scss
+++ b/shufl-web/src/styles.scss
@@ -50,6 +50,8 @@ body {
         left: 5%;
         right: 5%;
 
+        z-index: 1;
+
         .card {
             background-color: $primary-background-colour;
 
