--- a/shufl-web/src/styles.scss
+++ b/shufl-web/src/styles.scss
@@ -14,6 +14,10 @@ body {
 
     font-family: Arial, Helvetica, sans-serif;
 
+    p {
+        margin: 0;
+    }
+
     .app-icon {
         background-image: url("assets/img/logos/app/logo.png");
         background-size: cover;
@@ -56,6 +60,16 @@ body {
             background-color: $primary-background-colour;
 
             border-radius: $primary-border-radius;
+
+            a {
+                color: $tertiary-foreground-colour;
+
+                text-decoration: none;
+
+                &:hover {
+                    text-decoration: underline;
+                }
+            }
 
             .album-info-container,
             .artist-info-container {
