--- a/shufl-web/src/assets/scss/variables/dimensions.scss
+++ b/shufl-web/src/assets/scss/variables/dimensions.scss
@@ -1,4 +1,10 @@
+@import "colours";
+
 $primary-border-radius: 5px;
+
+$list-item-height: 45px;
+$list-item-padding: 5px;
+$list-item-border-bottom: 1px solid $tertiary-foreground-colour;
 
 $nav-bar-height: 60px;
 $nav-bar-width: 20%;
