--- a/shufl-web/src/app/components/shared/buttons/loading-button/loading-button.component.scss
+++ b/shufl-web/src/app/components/shared/buttons/loading-button/loading-button.component.scss
@@ -1,7 +1,15 @@
+@import "src/assets/scss/variables/colours";
+
 .button {
     width: 100%;
 
     margin-bottom: 0;
+
+    &.loading,
+    &:disabled {
+        cursor: default;
+        pointer-events: none;
+    }
 
     &.loading {
         .text {
@@ -15,5 +23,9 @@
             margin: auto;
             padding: 2px;
         }
+    }
+
+    &:disabled {
+        background: $secondary-foreground-colour-disabled;
     }
 }
