--- a/shufl-web/src/app/components/shared/user/register/register.component.scss
+++ b/shufl-web/src/app/components/shared/user/register/register.component.scss
@@ -28,4 +28,14 @@
             text-align: center;
         }
     }
+
+    .form-error {
+        color: $primary-negative-colour;
+
+        display: none;
+
+        &.visible {
+            display: block;
+        }
+    }
 }
