--- a/shufl-web/src/assets/scss/variables/colours.scss
+++ b/shufl-web/src/assets/scss/variables/colours.scss
@@ -8,6 +8,7 @@ $primary-foreground-colour: #d9d9da;
 
 $secondary-foreground-colour: #355c7d;
 $secondary-foreground-colour-hover: darken($secondary-foreground-colour, 10%);
+$secondary-foreground-colour-disabled: darken($secondary-foreground-colour, 20%);
 
 $tertiary-background-colour: #2c3035;
 $tertiary-background-colour-hover: darken($tertiary-background-colour, 5%);
