--- a/shufl-web/src/app/components/shared/user/register/register.component.scss
+++ b/shufl-web/src/app/components/shared/user/register/register.component.scss
@@ -38,4 +38,34 @@
             display: block;
         }
     }
+
+    .login-link {
+        width: 100%;
+
+        margin-top: 15px;
+
+        display: block;
+
+        text-align: center;
+    }
+}
+
+@media (min-width: 1920px) and (max-width: 2560px) {
+    .register-card {
+        .register-form-container {
+            width: 50%;
+
+            margin-top: 40px;
+        }
+    }
+}
+
+@media (min-width: 2560px) {
+    .register-card {
+        .register-form-container {
+            width: 40%;
+
+            margin-top: 50px;
+        }
+    }
 }
