--- a/shufl-web/src/assets/scss/form.scss
+++ b/shufl-web/src/assets/scss/form.scss
@@ -134,7 +134,6 @@ $input-border-width: 2px;
         }
 
         input {
-            width: 100%;
             height: 35px;
             max-height: 35px;
     
@@ -169,5 +168,15 @@ $input-border-width: 2px;
         -webkit-transition: opacity 0.1s linear;
         -moz-transition: opacity 0.1s linear;
         transition: opacity 0.1s linear;
+    }
+}
+
+@media (min-width: 1920px) {
+    .form-group {
+        .input-container {
+            input {
+                width: 100%;
+            }
+        }
     }
 }
