--- a/shufl-web/src/assets/scss/form.scss
+++ b/shufl-web/src/assets/scss/form.scss
@@ -134,6 +134,7 @@ $input-border-width: 2px;
         }
 
         input {
+            width: 95%;
             height: 35px;
             max-height: 35px;
     
