--- a/shufl-web/src/assets/scss/user-form.scss
+++ b/shufl-web/src/assets/scss/user-form.scss
@@ -22,31 +22,46 @@
 
         margin: auto;
         padding: 10px 0;
-    }
 
-    .form-error {
-        color: $primary-negative-colour;
-
-        padding: 15px 15px 0 15px;
-
-        display: none;
-
-        font-size: 16pt;
-        text-align: center;
-
-        &.visible {
-            display: block;
+        .form-error {
+            color: $primary-negative-colour;
+    
+            padding: 15px 15px 0 15px;
+    
+            display: none;
+    
+            font-size: 16pt;
+            text-align: center;
+    
+            &.visible {
+                display: block;
+            }
         }
-    }
+    
+        .form-link {
+            width: fit-content;
+    
+            margin: 15px auto 0px auto;
+    
+            display: block;
+    
+            text-align: center;
+        }
 
-    .form-link {
-        width: 100%;
+        .message-container {
+            .icon {
+                width: 45px;
+                height: 45px;
 
-        margin-top: 15px;
+                margin: auto;
+            }
 
-        display: block;
-
-        text-align: center;
+            h2 {
+                color: $primary-foreground-colour;
+                
+                text-align: center;
+            }
+        }
     }
 }
 
