--- a/shufl-web/src/assets/scss/user-form.scss
+++ b/shufl-web/src/assets/scss/user-form.scss
@@ -65,10 +65,10 @@
     }
 }
 
-@media (min-width: 1920px) and (max-width: 2560px) {
+@media (min-width: 1920px) {
     .user-form-card {
         .user-form-container {
-            width: 50%;
+            width: 30%;
 
             margin-top: 40px;
         }
@@ -78,8 +78,6 @@
 @media (min-width: 2560px) {
     .user-form-card {
         .user-form-container {
-            width: 40%;
-
             margin-top: 50px;
         }
     }
