--- a/shufl-web/src/app/components/group/group-item-details/group-item-user-rating-list/group-item-user-rating/group-item-user-rating.component.scss
+++ b/shufl-web/src/app/components/group/group-item-details/group-item-user-rating-list/group-item-user-rating/group-item-user-rating.component.scss
@@ -7,15 +7,24 @@
 
     border-radius: 5px;
 
-    &.left {
-        margin: 15px 7.5px 0 15px;
-    }
-
+    &.left,
     &.right {
-        margin: 15px 15px 0 7.5px;
+        margin: 15px 0 0 0;
     }
 
     .rating-comment {
         margin-bottom: 5px;
+    }
+}
+
+@media (min-width: 765px) {
+    .group-item-user-rating-container {
+        &.left {
+            margin: 15px 7.5px 0 15px;
+        }
+    
+        &.right {
+            margin: 15px 15px 0 7.5px;
+        }
     }
 }
